# aura-code

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  requirements-1.md  requirements.md
.github/actions/setup-zui-sibling/: action.yml
.github/workflows/: android-mobile.yml  aura-evals.yml  desktop-validate.yml  ios-mobile.yml  release-nightly.yml  release-stable.yml
apps/aura-os-desktop/: Cargo.toml  build.rs
apps/aura-os-desktop/src/: handlers.rs  main.rs  updater.rs
apps/aura-os-server/: Cargo.toml
apps/aura-os-server/src/: app_builder.rs  auth_guard.rs  dto.rs  lib.rs  main.rs  orbit_client.rs  persistence.rs  router.rs  state.rs
apps/aura-os-server/tests/: agent_create_test.rs  api_tests.rs  chat_events_test.rs  harness_proxy_test.rs
apps/desktop/: Cargo.toml  build.rs
apps/desktop/src/: handlers.rs  main.rs  updater.rs
apps/ide/: Cargo.toml
apps/ide/src/: lib.rs
apps/server/: Cargo.toml
apps/server/src/: app_builder.rs  dto.rs  error.rs  lib.rs  loop_log.rs  main.rs  network_bridge.rs  persistence.rs  router.rs  session_init.rs  state.rs
apps/server/src/handlers/: agents.rs  auth.rs  billing.rs  dev_loop.rs  feed.rs  files.rs  follows.rs  leaderboard.rs  log.rs  mod.rs  orbit.rs  orgs.rs  pricing.rs  projects.rs  projects_helpers.rs  settings.rs  specs.rs  sprints.rs  sse.rs  tasks.rs  terminal.rs  users.rs
apps/server/src/handlers/agents/: conversions.rs  crud.rs  instances.rs  messages.rs  mod.rs  sessions.rs
apps/server/tests/: api_tests.rs
apps/server/tests/common/: mod.rs
aura-billing/src/: client.rs  error.rs
aura-chat/src/: chat.rs  chat_tool_executor.rs
aura-claude/: Cargo.toml
aura-claude/src/: lib.rs
aura-core/src/: entities.rs  enums.rs  ids.rs  settings.rs
aura-core/tests/: round_trips.rs
aura-desktop/: Cargo.toml  build.rs
aura-desktop/src/: main.rs  updater.rs
aura-engine/src/: build_verify.rs  engine.rs  error.rs  events.rs  file_ops.rs  lib.rs  metrics.rs
aura-engine/src/engine/: orchestrator.rs
aura-engine/tests/: engine_tests.rs
aura-ide/: Cargo.toml
aura-ide/src/: lib.rs
aura-pricing/: Cargo.toml
aura-projects/src/: lib.rs
aura-server/: Cargo.toml
aura-server/src/: dto.rs  error.rs  lib.rs  main.rs  router.rs  state.rs
aura-server/src/handlers/: agents.rs  billing.rs  chat.rs  dev_loop.rs  github.rs  mod.rs  orgs.rs  pricing.rs  projects.rs  settings.rs  specs.rs  sprints.rs  tasks.rs  terminal.rs  ws.rs
aura-server/tests/: api_tests.rs
aura-services/: Cargo.toml
aura-services/src/: agent.rs  auth.rs  chat.rs  chat_tool_executor.rs  chat_tools.rs  claude.rs  error.rs  github.rs  lib.rs  org.rs  pricing.rs  project.rs  session.rs  spec_gen.rs  task.rs  task_extraction.rs  tools.rs
aura-services/src/spec_gen/: mod.rs  parser.rs  streaming.rs
aura-services/tests/: agent_session_tests.rs  project_tests.rs  task_tests.rs
aura-settings/src/: service.rs
aura-specs/src/spec_gen/: mod.rs  streaming.rs
aura-store/: Cargo.toml
aura-store/src/: batch.rs  lib.rs  store.rs  store_agent.rs  store_chat.rs  store_github.rs  store_project.rs
aura-store/tests/: integration.rs
aura-tools/: Cargo.toml
aura-tools/src/: lib.rs
crates/ai/chat/: Cargo.toml
crates/ai/engine/: Cargo.toml
crates/ai/harness/: Cargo.toml
crates/ai/link/: Cargo.toml
crates/ai/tools/: Cargo.toml
crates/aura-os-agents/: Cargo.toml
crates/aura-os-agents/src/: lib.rs
crates/aura-os-auth/: Cargo.toml
crates/aura-os-billing/: Cargo.toml
crates/aura-os-core/: Cargo.toml
crates/aura-os-integrations/: Cargo.toml
crates/aura-os-link/: Cargo.toml
crates/aura-os-network/: Cargo.toml
crates/aura-os-orgs/: Cargo.toml
crates/aura-os-orgs/src/: error.rs  lib.rs
crates/aura-os-process/: Cargo.toml
crates/aura-os-projects/: Cargo.toml
crates/aura-os-projects/src/: error.rs  lib.rs
crates/aura-os-sessions/: Cargo.toml
crates/aura-os-settings/: Cargo.toml
crates/aura-os-settings/src/: service.rs
crates/aura-os-settings/tests/: integration.rs
crates/aura-os-storage/: Cargo.toml
crates/aura-os-store/: Cargo.toml
crates/aura-os-super-agent/: Cargo.toml
crates/aura-os-tasks/: Cargo.toml
crates/aura-os-tasks/src/: lib.rs  task_service.rs
crates/aura-os-tasks/tests/: state_machine.rs
crates/domain/sessions/: Cargo.toml
crates/domain/sessions/src/: error.rs  lib.rs
crates/domain/sessions/tests/: context_rollover.rs
crates/domain/sessions/tests/common/: mod.rs
crates/infra/terminal/: Cargo.toml
crates/infra/terminal/src/: lib.rs
docs/: agent-runtime-adapter-plan.md  capabilities-and-credentials-architecture.md  plan-orbit-integration.md  production-architecture.md  release-build-strategy.md  release-workflows.md  tooling-and-integration-architecture-plan.md
evals/local-stack/: README.md  stack.env.example
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  index.css  main.tsx  zui.d.ts
interface/: package-lock.json  package.json  playwright.config.ts
interface/scripts/: aura-control-plane-mcp.mjs  run-agent-runtime-eval.mjs  run-harness-context-benchmark.mjs  run-live-benchmark-api.mjs  summarize-benchmark-usage.mjs  test-dynamic-mcp-sidecar.mjs
interface/src/: App.tsx  constants.ts  index.css
scripts/: desktop-manifest-validate.mjs  desktop-release-summary.mjs  run-mobile-dev.sh  test-aura-network.mjs  test-aura-storage.mjs  test-zbilling-api.mjs
specs/: 01-core-domain-types.md  02-persistence-layer.md  03-settings-and-api-keys.md  04-project-and-spec-management.md  07-autonomous-dev-loop.md  08-backend-http-api.md  09-frontend-shell-and-planning-ui.md  10-realtime-execution-ui.md  14-mobile-ia-handoff.md
(+887 files in other folders)
