[package]
name = "aura-os-orgs"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-os-core = { path = "../../infra/core" }
aura-os-store = { path = "../../infra/store" }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
