[package]
name = "aura-os-projects"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-os-core = { path = "../../infra/core" }
aura-os-network = { path = "../../infra/network" }
aura-os-store = { path = "../../infra/store" }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
