[package]
name = "aura-os-projects"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-os-core = { path = "../aura-os-core" }
aura-os-network = { path = "../aura-os-network" }
aura-os-store = { path = "../aura-os-store" }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
