[package]
name = "aura-os-tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-os-core = { path = "../../infra/core" }
aura-os-store = { path = "../../infra/store" }
aura-os-storage = { path = "../../infra/storage" }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
aura-os-storage = { path = "../../infra/storage", features = ["test-utils"] }
