[package]
name = "aura-os-sessions"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-os-core = { path = "../../infra/core" }
aura-os-store = { path = "../../infra/store" }
aura-os-storage = { path = "../../infra/storage" }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "1"
serde_json = "1"

[dev-dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
